fix: correct alignment property in textarea body style

--- a/packages/papayaui/components/textarea/textarea.scss
+++ b/packages/papayaui/components/textarea/textarea.scss
@@ -14,7 +14,7 @@
 
   &__body {
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     width: 100%;
   }
 
